syntax = "proto3";

package videoprocessor;

service VideoProcessorService {
    rpc UploadVideo(VideoUploadRequest) returns (VideoUploadResponse);
    rpc ProcessQuery(QueryRequest) returns (QueryResponse);
    rpc GetProcessingStatus(StatusRequest) returns (StatusResponse);
}

message VideoUploadRequest {
    string filename = 1;
    bytes video_data = 2;
}

message VideoUploadResponse {
    string video_id = 1;
    bool success = 2;
    string message = 3;
}

message QueryRequest {
    string video_id = 1;
    string query = 2;
    string query_type = 3; // transcribe, summarize, analyze, extract
}

message QueryResponse {
    string result = 1;
    bool success = 2;
    string error_message = 3;
}

message StatusRequest {
    string video_id = 1;
}

message StatusResponse {
    string status = 1; // processing, completed, error
    int32 progress_percentage = 2;
    string message = 3;
}